# ai_analyzing

./: .env.example  .gitignore  diagnose.sh  pyproject.toml
dataset/: bugs.json
dataset/files/: cwe125_bad.c  cwe125_good.c  cwe190_bad.c  cwe190_good.c  cwe401_bad.c  cwe401_good.c  cwe415_bad.c  cwe415_good.c  cwe416_bad.c  cwe416_good.c  cwe457_bad.c  cwe457_good.c  cwe476_bad.c  cwe476_good.c  cwe787_bad.c  cwe787_good.c
results/: experiments.csv  raw_results.csv  report.json
src/: pipeline.py
src/experiments/: runner.py
src/llm/: client.py  prompts.py
src/metrics/: calculator.py  reporter.py
src/rules/: generator.py  parser.py  validator.py
src/utils/: config.py  logger.py
