[project]
name = "diploma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "openai>=2.29.0",
    "requests>=2.32.5",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pyright]
venvPath = "."
venv = ".venv"
